# ootrstats

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
assets/: clean-worker.py  net.fenhl.ootrstats.plist  ootrstats-worker.service  ootrstats.fenhl.net.nginx  plot-workers.py  plot.ipynb  plot.py  pre-commit.ps1
assets/doc/: linux-setup.md  macos-setup.md  windows-setup.md
assets/draft/: fr-4.draft.rs  fr-5.draft.rs  mw-5.draft.rs
crate/ootrstats/: Cargo.toml
crate/ootrstats-macros/: Cargo.toml
crate/ootrstats-macros/src/: lib.rs
crate/ootrstats-supervisor/: Cargo.toml
crate/ootrstats-supervisor/src/: config.rs  gui.rs  lib.rs  main.rs  msg.rs  worker.rs
crate/ootrstats-worker-daemon/: Cargo.toml
crate/ootrstats-worker-daemon/src/: config.rs  lib.rs  main.rs
crate/ootrstats-worker-windows-service/: Cargo.toml
crate/ootrstats-worker-windows-service-installer/: Cargo.toml
crate/ootrstats-worker-windows-service-installer/src/: main.rs
crate/ootrstats-worker-windows-service-uninstaller/: Cargo.toml
crate/ootrstats-worker-windows-service-uninstaller/src/: main.rs
crate/ootrstats-worker-windows-service/src/: main.rs
crate/ootrstats/src/: lib.rs  websocket.rs  worker.rs
crate/ootrstats/src/draft/: ast.rs  mod.rs
