[package]
name = "ootrstats-worker-daemon"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-proto = { version = "0.24", features = ["tokio-tungstenite021"] }
constant_time_eq = "0.4.0"
either = "1.10.0"
futures = "0.3.30"
log-lock = { git = "https://github.com/fenhl/log-lock", branch = "main" }
mimalloc = "0.1.43"
ootrstats = { path = "../ootrstats" }
ootrstats-macros = { path = "../ootrstats-macros" }
rocket = "0.5.0"
rocket_ws = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.36.0", features = ["macros", "parking_lot", "process", "sync", "time"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["rocket", "serde", "serde_json"] }

[target."cfg(windows)".dependencies]
directories = "6"

[target."cfg(unix)".dependencies]
xdg = "2.5.2"
