[package]
name = "ootrstats-worker-daemon"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
nixos = ["ootrstats/nixos"]

[dependencies]
async-proto = { version = "0.26", features = ["tokio-tungstenite021"] }
constant_time_eq = "0.4.0"
either = "1.10.0"
futures = "0.3.30"
itertools = "0.14.0"
log-lock = { git = "https://github.com/fenhl/log-lock" }
mimalloc = "0.1.43"
ootrstats = { path = "../ootrstats" }
ootrstats-macros = { path = "../ootrstats-macros" }
rocket = "0.5.0"
rocket_ws = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.36.0", features = ["macros", "parking_lot", "process", "sync", "time"] }
wheel = { git = "https://github.com/fenhl/wheel", features = ["rocket", "serde_json"] }

[target."cfg(windows)".dependencies]
directories = "6"
windows-registry = "0.6"
windows-result = "0.4"

[target."cfg(unix)".dependencies]
xdg = "3"
