[package]
name = "ootrstats-worker-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
nixos = ["ootrstats/nixos"]

[dependencies]
async-proto = { version = "0.26", features = ["tokio-tungstenite021"] }
constant_time_eq = "0.4"
either = "1"
futures = "0.3"
itertools = "0.14"
log-lock = { git = "https://github.com/fenhl/log-lock" }
mimalloc = "0.1"
ootrstats = { path = "../ootrstats" }
ootrstats-macros = { path = "../ootrstats-macros" }
rocket = "0.5"
rocket_ws = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "parking_lot", "process", "sync", "time"] }
wheel = { git = "https://github.com/fenhl/wheel", features = ["rocket", "serde_json"] }

[target."cfg(windows)".dependencies]
directories = "6"
windows-registry = "0.6"
windows-result = "0.4"

[target."cfg(unix)".dependencies]
xdg = "3"
