[package]
name = "ootrstats-worker-windows-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mimalloc = "0.1"
ootrstats-worker-daemon = { path = "../ootrstats-worker-daemon" }
rocket = "0.5"
thiserror = "2"
windows-service = "0.8"
