[package]
name = "ootrstats"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
nixos = []

[dependencies]
async-proto = { version = "0.26", features = ["bytes", "bytesize", "either", "gix-hash", "serde_json"] }
bytes = "1.5.0"
bytesize = "2.0.1"
cargo_metadata = "0.23"
collect-mac = "0.1.0"
decompress = { git = "https://github.com/fenhl/OoT_Decompressor" }
directories = "6"
either = "1.10.0"
futures = "0.3.30"
gix-hash = "0.20"
if_chain = "1.0.2"
itertools = "0.14"
lazy-regex = "3.1.0"
parking_lot = "0.12.4"
rand = "0.9"
rustc-stable-hash = "0.1.1"
semver = "1.0.23"
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
syn = { version = "2.0.66", default-features = false, features = ["parsing"] }
systemstat = "0.2.5"
tempfile = "3.20.0"
thiserror = "2"
tokio = { version = "1.36.0", features = ["macros", "process", "sync", "time"] }
wheel = { git = "https://github.com/fenhl/wheel" }

[target.'cfg(target_os = "macos")'.dependencies]
xdg = "3"
