[package]
name = "ootrstats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
nixos = []

[dependencies]
async-proto = { version = "0.26", features = ["bytes", "bytesize", "either", "gix-hash", "serde_json"] }
bytes = "1"
bytesize = "2"
cargo_metadata = "0.23"
collect-mac = "0.1"
cross-path = "0.0.1"
decompress = { git = "https://github.com/fenhl/OoT_Decompressor" }
directories = "6"
either = "1"
futures = "0.3"
gix-hash = "0.22"
if_chain = "1"
itertools = "0.14"
lazy-regex = "3"
parking_lot = "0.12"
rand = "0.9"
rustc-stable-hash = "0.1"
semver = "1"
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
syn = { version = "2", default-features = false, features = ["parsing"] }
systemstat = "0.2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "sync", "time"] }
wheel = { git = "https://github.com/fenhl/wheel" }

[target.'cfg(target_os = "macos")'.dependencies]
xdg = "3"
